// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Use a custom domain for engagement tracking
      </p>,
      "image": [Function],
      "show": false,
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Tracking Domain",
      "to": "/account/tracking-domains/create",
    }
  }
  title="Tracking Domains"
>
  <div>
    <UnverifiedBanner />
    <withRouter(Collection)
      filterBox={
        Object {
          "exampleModifiers": Array [
            "domain",
            "status",
          ],
          "itemToStringKeys": Array [
            "domain",
            "subaccount_id",
          ],
          "show": true,
        }
      }
      outerWrapper={[Function]}
      pagination={true}
      rowComponent={[Function]}
      rowKeyName="domain"
      rows={
        Array [
          Object {
            "default": false,
            "domain": "all.verified.com",
            "status": Object {
              "cname_status": "valid",
              "compliance_status": "valid",
              "verified": true,
            },
          },
          Object {
            "default": false,
            "domain": "all.unverified.com",
            "status": Object {
              "cname_status": "unverified",
              "compliance_status": "unverified",
              "verified": false,
            },
          },
          Object {
            "default": true,
            "domain": "the.default.com",
            "status": Object {
              "cname_status": "valid",
              "compliance_status": "valid",
              "verified": true,
            },
          },
        ]
      }
    />
  </div>
</Page>
`;

exports[`renders during initial load 1`] = `<Loading />`;

exports[`renders empty state 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Use a custom domain for engagement tracking
      </p>,
      "image": [Function],
      "show": true,
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Tracking Domain",
      "to": "/account/tracking-domains/create",
    }
  }
  title="Tracking Domains"
>
  <div>
    <UnverifiedBanner />
    <withRouter(Collection)
      filterBox={
        Object {
          "exampleModifiers": Array [
            "domain",
            "status",
          ],
          "itemToStringKeys": Array [
            "domain",
            "subaccount_id",
          ],
          "show": true,
        }
      }
      outerWrapper={[Function]}
      pagination={true}
      rowComponent={[Function]}
      rowKeyName="domain"
      rows={Array []}
    />
  </div>
</Page>
`;

exports[`renders errors when present 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Use a custom domain for engagement tracking
      </p>,
      "image": [Function],
      "show": false,
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Tracking Domain",
      "to": "/account/tracking-domains/create",
    }
  }
  title="Tracking Domains"
>
  <ApiErrorBanner
    error={
      Object {
        "meta": Object {
          "method": "GET",
        },
        "payload": Object {
          "message": "Uh oh! It broke.",
        },
      }
    }
    reload={[Function]}
  />
</Page>
`;
